src/plp/functional1/parser/Func1Parser.java
/* Generated By:JavaCC: Do not edit this line. Func1Parser.java */
package plp.functional1.parser;

import plp.functional1.*;
import plp.functional1.declaration.DecVariavel;
import plp.functional1.declaration.DeclaracaoFuncional;
import plp.functional1.declaration.DecFuncao;
import plp.functional1.expression.ExpDeclaracao;
import plp.functional1.expression.IfThenElse;
import plp.functional1.expression.Aplicacao;
import java.util.*;
import plp.expressions2.expression.ExpAnd;
import plp.expressions2.expression.ExpConcat;
import plp.expressions2.expression.ExpEquals;
import plp.expressions2.expression.ExpLength;
import plp.expressions2.expression.ExpMenos;
import plp.expressions2.expression.ExpNot;
import plp.expressions2.expression.ExpOr;
import plp.expressions2.expression.ExpSoma;
import plp.expressions2.expression.ExpSub;
import plp.expressions2.expression.Expressao;
import plp.expressions2.expression.Id;
import plp.expressions2.expression.Valor;
import plp.expressions2.expression.ValorBooleano;
import plp.expressions2.expression.ValorInteiro;
import plp.expressions2.expression.ValorString;


public class Func1Parser implements Func1ParserConstants {

    public static void main(String args[]) {
            Func1Parser parser;
            if (args.length == 0) {
                System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Reading from standard input . . .");
                parser = new Func1Parser(System.in);
            } else if (args.length == 1) {
                System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Reading from file " + args[0] + " . . .");
                try {
                        parser = new Func1Parser(new java.io.FileInputStream(args[0]));
                } catch (java.io.FileNotFoundException e) {
                        System.out.println("Funcional 1 PLP Parser Version 0.0.1:  File " + args[0] + " not found.");
                        return;
                }
            } else {
                System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Usage is one of:");
                System.out.println("         java Func1Parser < inputfile");
                System.out.println("OR");
                System.out.println("         java Func1Parser inputfile");
                return;
            }
            Programa programa = null;
            try {
                programa = parser.Input();
                System.out.println("Funcional 1 PLP Parser Version 0.0.1: Expressoes1 program parsed successfully.");
            } catch (ParseException e) {
                e.printStackTrace();
                System.out.println("Funcional 1 PLP Parser Version 0.0.1: Encountered errors during parse.");
                System.exit(0);
            }
            try {
                System.out.println("Funcional 1 PLP Parser Version 0.0.1: running...");
                Valor val = programa.executar();
                if (val instanceof ValorString) {
                        ValorString valStr = (ValorString) val;
                        System.out.println("Funcional 1 PLP Parser Version 0.0.1: resultado="+valStr.valor());
                } else if (val instanceof ValorInteiro) {
                    ValorInteiro valInt = (ValorInteiro) val;
                        System.out.println("Funcional 1 PLP Parser Version 0.0.1: resultado="+valInt.valor());
            } else if (val instanceof ValorBooleano) {
                ValorBooleano valBool = (ValorBooleano) val;
                System.out.println("Funcional 1 PLP Parser Version 0.0.1: resultado="+valBool.valor());
            }
                } catch (Exception e) {
                e.printStackTrace();
                System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Encountered errors during execution.");
            }
        }

  static final public Programa Input() throws ParseException {
    Programa retorno;
    retorno = PPrograma();
    jj_consume_token(0);
        {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValorInteiro() throws ParseException {
        Token token;
    token = jj_consume_token(INTEGER_LITERAL);
                //System.out.println("ValorInteiro=" + token.toString());
                {if (true) return new ValorInteiro(Integer.parseInt(token.toString()));}
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValorBooleano() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FALSE:
      jj_consume_token(FALSE);
                    {if (true) return new ValorBooleano(false);}
      break;
    case TRUE:
      jj_consume_token(TRUE);
                    {if (true) return new ValorBooleano(true);}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValorString() throws ParseException {
        Token token;
    token = jj_consume_token(STRING_LITERAL);
//		System.out.println("ValorString=" + token.toString().length());
                String tokenStr = token.toString();
                tokenStr = tokenStr.substring(1,tokenStr.length()-1);
                {if (true) return new ValorString(tokenStr);}
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValor() throws ParseException {
        Valor retorno;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      retorno = PValorInteiro();
      break;
    case TRUE:
    case FALSE:
      retorno = PValorBooleano();
      break;
    case STRING_LITERAL:
      retorno = PValorString();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Id PId() throws ParseException {
        Token token;
    token = jj_consume_token(IDENTIFIER);
                //System.out.println("Id=" + token.toString());
                //System.out.println("tam id=" + token.toString().length());
                String tokenStr = token.toString();
//		tokenStr = tokenStr.substring(1,tokenStr.length()-1);
                {if (true) return new Id(tokenStr);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpMenos() throws ParseException {
        Expressao retorno;
    jj_consume_token(MINUS);
    retorno = PExpPrimaria();
                {if (true) return new ExpMenos(retorno);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpNot() throws ParseException {
        Expressao retorno;
    jj_consume_token(NOT);
    retorno = PExpPrimaria();
                {if (true) return new ExpNot(retorno);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpLength() throws ParseException {
        Expressao retorno;
    jj_consume_token(LENGTH);
    retorno = PExpPrimaria();
                if (retorno instanceof ValorString) {
                    ValorString val = (ValorString) retorno;
//		    System.out.println("Length val=" + val.valor());
                }
//		System.out.println("1-" + retorno.toString());
                {if (true) return new ExpLength(retorno);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpPrimaria() throws ParseException {
    Expressao retorno;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case INTEGER_LITERAL:
    case STRING_LITERAL:
      retorno = PValor();
      break;
    case IDENTIFIER:
      retorno = PId();
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      retorno = PExpressao();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                //System.out.println("PExpPrimaria=" + retorno);
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public List PListaId() throws ParseException {
        List<Id> retorno = null;
        Id id;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      id = PId();
         if (retorno == null) {
             retorno = new ArrayList<Id>();
             retorno.add(id);
         } else {
             retorno.add(id);
         }
    }
        {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public DeclaracaoFuncional PDeclVar() throws ParseException {
        Id id;
        Expressao expressao;
        DeclaracaoFuncional retorno;
    jj_consume_token(VAR);
    id = PId();
    jj_consume_token(ASSIGN);
    expressao = PExpressao();
                {if (true) return new DecVariavel(id, expressao);}
    throw new Error("Missing return statement in function");
  }

  static final public DeclaracaoFuncional PDeclFuncao() throws ParseException {
        Id id;
        Expressao expressao;
        DeclaracaoFuncional retorno;
        List<Id> lista;
    jj_consume_token(FUNC);
    id = PId();
    lista = PListaId();
    jj_consume_token(ASSIGN);
    expressao = PExpressao();
                {if (true) return new DecFuncao(id, lista, expressao);}
    throw new Error("Missing return statement in function");
  }

  static final public List PDeclFuncional() throws ParseException {
        List retorno=null;
        DeclaracaoFuncional decl;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      decl = PDeclVar();
      break;
    case FUNC:
      decl = PDeclFuncao();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         retorno = new ArrayList();
         retorno.add(decl);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      if (jj_2_1(2147483647)) {
        jj_consume_token(COMMA);
        decl = PDeclVar();
      } else if (jj_2_2(2147483647)) {
        jj_consume_token(COMMA);
        decl = PDeclFuncao();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
             retorno.add(decl);
    }
            {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpDeclaracao() throws ParseException {
        List declaracoes;
        Expressao expressao;
    jj_consume_token(LET);
    declaracoes = PDeclFuncional();
    jj_consume_token(IN);
    expressao = PExpressao();
                {if (true) return new ExpDeclaracao(declaracoes, expressao);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpCondicional() throws ParseException {
        Expressao expCond, expThen, expElse;
    jj_consume_token(IF);
    expCond = PExpressao();
    jj_consume_token(THEN);
    expThen = PExpressao();
    jj_consume_token(ELSE);
    expElse = PExpressao();
                {if (true) return new IfThenElse(expCond, expThen, expElse);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PAplicacao() throws ParseException {
        List expressoes = null;
        Expressao expressao;
        Id id;
    id = PId();
    jj_consume_token(LPAREN);
    expressao = PExpressao();
            expressoes = new ArrayList();
            expressoes.add(expressao);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      expressao = PExpressao();
          expressoes.add(expressao);
    }
    jj_consume_token(RPAREN);
                {if (true) return new Aplicacao(id, expressoes);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpUnaria() throws ParseException {
        Expressao retorno;
    if (jj_2_3(2147483647)) {
      retorno = PExpMenos();
    } else if (jj_2_4(2147483647)) {
      retorno = PExpNot();
    } else if (jj_2_5(2147483647)) {
      retorno = PExpLength();
    } else if (jj_2_6(2147483647)) {
      retorno = PExpDeclaracao();
    } else if (jj_2_7(2147483647)) {
      retorno = PExpCondicional();
    } else if (jj_2_8(2147483647)) {
      retorno = PAplicacao();
    } else if (jj_2_9(2147483647)) {
      retorno = PExpPrimaria();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                //System.out.println("ExpressaoUnaria=" + retorno);
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpBinaria() throws ParseException {
        Expressao retorno, param2;
    retorno = PExpUnaria();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case OR:
      case EQ:
      case CONCAT:
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        param2 = PExpUnaria();
                retorno = new ExpSoma(retorno, param2);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        param2 = PExpUnaria();
                retorno = new ExpSub(retorno, param2);
        break;
      case AND:
        jj_consume_token(AND);
        param2 = PExpUnaria();
                retorno = new ExpAnd(retorno, param2);
        break;
      case OR:
        jj_consume_token(OR);
        param2 = PExpUnaria();
                retorno = new ExpOr(retorno, param2);
        break;
      case EQ:
        jj_consume_token(EQ);
        param2 = PExpUnaria();
                retorno = new ExpEquals(retorno, param2);
        break;
      case CONCAT:
        jj_consume_token(CONCAT);
        param2 = PExpUnaria();
                retorno = new ExpConcat(retorno, param2);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                //System.out.println("ExpressaoBinaria=" + retorno);
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpressao() throws ParseException {
        Expressao retorno;
    retorno = PExpBinaria();
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Programa PPrograma() throws ParseException {
        Expressao retorno;
    retorno = PExpressao();
                //System.out.println("Expressao=" + retorno);
                {if (true) return new Programa(retorno);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_3R_42() {
    if (jj_scan_token(OR)) return true;
    if (jj_3R_26()) return true;
    return false;
  }

  static private boolean jj_3R_31() {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_48()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_47() {
    if (jj_scan_token(STRING_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3R_41() {
    if (jj_scan_token(AND)) return true;
    if (jj_3R_26()) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    if (jj_scan_token(LET)) return true;
    if (jj_3R_12()) return true;
    if (jj_scan_token(IN)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_13()) return true;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_51() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  static private boolean jj_3R_50() {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  static private boolean jj_3R_46() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_50()) {
    jj_scanpos = xsp;
    if (jj_3R_51()) return true;
    }
    return false;
  }

  static private boolean jj_3R_40() {
    if (jj_scan_token(MINUS)) return true;
    if (jj_3R_26()) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_scan_token(FUNC)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_scan_token(VAR)) return true;
    return false;
  }

  static private boolean jj_3R_39() {
    if (jj_scan_token(PLUS)) return true;
    if (jj_3R_26()) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_27() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_39()) {
    jj_scanpos = xsp;
    if (jj_3R_40()) {
    jj_scanpos = xsp;
    if (jj_3R_41()) {
    jj_scanpos = xsp;
    if (jj_3R_42()) {
    jj_scanpos = xsp;
    if (jj_3R_43()) {
    jj_scanpos = xsp;
